--- a/casestudies/110/casestudy/www/layout/case_id_110_id_759_pid_0.html
+++ b/casestudies/110/casestudy/www/layout/case_id_110_id_759_pid_0.html
@@ -221,7 +221,7 @@ font-style:italic;
     <div class="content"><div class="content">
 <ul class="menu">
 <li class="printpdf">
-<a href="https://casestudies.jrn.columbia.edu/casestudy/files/global/110/Hell&#32;&amp;&#32;Back_wm.pdf" target="_blank">Download this case as a PDF</a></li>
+<a href="../../files/global/110/Hell&#32;&amp;&#32;Back_wm.pdf" target="_blank">Download this case as a PDF</a></li>
 </ul>
 </div>
 </div>
