--- a/casestudies/16/casestudy/www/layout/case_id_16_id_27_c_bio.html
+++ b/casestudies/16/casestudy/www/layout/case_id_16_id_27_c_bio.html
@@ -276,7 +276,7 @@ font-style:italic;
 		
 		  <div class="node">        
     <span class="taxonomy"></span>
-    <div class="content"><p><span class="inline left"><img width="130" height="150" border="0" alt="" class="image _original" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/dykman.jpg" /></span>As <em>Time</em>&rsquo;s graphics director, Jackson Dykman oversaw the production of <em>Time</em>&rsquo;s graphic content. Dykman grew up in Bethesda, Maryland and attended Northwestern's Medill School of Journalism.</p>
+    <div class="content"><p><span class="inline left"><img width="130" height="150" border="0" alt="" class="image _original" src="../../files/TimeMagazine/images/dykman.jpg" /></span>As <em>Time</em>&rsquo;s graphics director, Jackson Dykman oversaw the production of <em>Time</em>&rsquo;s graphic content. Dykman grew up in Bethesda, Maryland and attended Northwestern's Medill School of Journalism.</p>
 <p>Dykman&rsquo;s first newspaper job was as a reporting intern at a paper in Tucson, Arizona. He then became a copy editor at the Cleveland <em>Plain Dealer</em>.</p>
 <p>It was at the <em>Miami Herald</em> that Dykman first led an art department. He was recruited from there to the <em>Washington Post</em>, where he was graphics director first for the Metro section and then for the entire paper. Throughout the 1990s, he was a regular guest teacher at the <a href="http://poynter.org" target="_blank" class="extlink">Poynter Institute for Media Studies</a>, where he taught techniques for integrating words and visuals.</p>
 <p>He took the helm of <em>Time</em>&rsquo;s graphics department in 2001.</p>
