--- a/casestudies/16/casestudy/www/layout/case_id_16_id_28_c_bio.html
+++ b/casestudies/16/casestudy/www/layout/case_id_16_id_28_c_bio.html
@@ -276,7 +276,7 @@ font-style:italic;
 		
 		  <div class="node">        
     <span class="taxonomy"></span>
-    <div class="content"><p><span class="inline left"><img width="130" height="150" border="0" alt="" class="image _original" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/Nancy_gibbs_0.jpg" /></span>Nancy Gibbs was an editor-at-large for <em>Time</em>. Among the more than 100 cover stories she wrote for the magazine was its black-bordered September 11<sup>th</sup> issue, which won a National Magazine Award.</p>
+    <div class="content"><p><span class="inline left"><img width="130" height="150" border="0" alt="" class="image _original" src="../../files/TimeMagazine/images/Nancy_gibbs_0.jpg" /></span>Nancy Gibbs was an editor-at-large for <em>Time</em>. Among the more than 100 cover stories she wrote for the magazine was its black-bordered September 11<sup>th</sup> issue, which won a National Magazine Award.</p>
 <p style="margin: 0in 0in 0pt;" class="MsoNormal">Gibbs had twice been Ferris Professor of Journalism at Princeton University, teaching a seminar on politics and the press. She was a consultant for CBS News in addition to contributing essays to PBS NewsHour. She and <i>Time</i>&rsquo;s Michael Duffy were co-authors of <em>The Preacher and the Presidents: Billy Graham in the White House.</em></p>
 <p>A graduate of Yale, Gibbs also studied politics and philosophy as a Marshall scholar at Oxford University.</p>
 <h2>Audio</h2>
