--- a/casestudies/16/casestudy/www/layout/case_id_16_id_29_c_bio.html
+++ b/casestudies/16/casestudy/www/layout/case_id_16_id_29_c_bio.html
@@ -276,7 +276,7 @@ font-style:italic;
 		
 		  <div class="node">        
     <span class="taxonomy"></span>
-    <div class="content"><p><span class="inline left"><img width="130" height="150" border="0" alt="" class="image _original" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/kelly.jpg" /></span>Jim Kelly became the first managing editor of Time Inc. in June of 2006. With Time Inc.'s editor-in-chief, Kelly guided the standards and practices of the company's roughly 130 titles.</p>
+    <div class="content"><p><span class="inline left"><img width="130" height="150" border="0" alt="" class="image _original" src="../../files/TimeMagazine/images/kelly.jpg" /></span>Jim Kelly became the first managing editor of Time Inc. in June of 2006. With Time Inc.'s editor-in-chief, Kelly guided the standards and practices of the company's roughly 130 titles.</p>
 <p>Kelly had previously spent five years as the managing editor of <em>Time, </em>during which period the magazine won four National Magazine Awards<em>. </em>Kelly directed the magazine's coverage of the September 11, 2001 terrorist attacks and Hurricane Katrina.</p>
 <p>Kelly's career at <em>Time </em>began in 1978. He served as foreign editor during the first Gulf War and the fall of the Soviet Union, became deputy managing editor in 1996, and rose to the position of managing editor in 2001.</p>
 <h2>Audio</h2>
