--- a/casestudies/16/casestudy/www/layout/case_id_16_id_30_c_bio.html
+++ b/casestudies/16/casestudy/www/layout/case_id_16_id_30_c_bio.html
@@ -276,7 +276,7 @@ font-style:italic;
 		
 		  <div class="node">        
     <span class="taxonomy"></span>
-    <div class="content"><p><span class="inline left"><img width="130" height="150" border="0" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/stengel.jpg" class="image _original" alt="" /></span>Richard Stengel became <em>Time'</em>s managing editor in June of 2006. He came to this position from the National Constitution Center, a museum and think tank in Philadelphia where he was president and CEO.</p>
+    <div class="content"><p><span class="inline left"><img width="130" height="150" border="0" src="../../files/TimeMagazine/images/stengel.jpg" class="image _original" alt="" /></span>Richard Stengel became <em>Time'</em>s managing editor in June of 2006. He came to this position from the National Constitution Center, a museum and think tank in Philadelphia where he was president and CEO.</p>
 <p>Stengel had previously worked at <em>Time </em>for a number of years in various capacities. He was a national and culture editor, as well as one of the first editors of <em>Time</em>'s<em> </em>website,<em> </em>Time.com.</p>
 <p>He has contributed to several other publications, including <i>The </i><em>New Yorker</em>, <i>The</i> <em>New Republic</em>, and the <em>New York Times</em>. He was the author of several books, and the co-author of Nelson Mandela's autobiography.</p>
 <p>Stengel graduated from Princeton University and studied at Oxford as a Rhodes Scholar.</p>
