more updates to case 17

--- a/casestudies/17/casestudy/www/layout/case_id_17_id_36_c_bio.html
+++ b/casestudies/17/casestudy/www/layout/case_id_17_id_36_c_bio.html
@@ -240,7 +240,7 @@ font-style:italic;
 		
 		  <div class="node">        
     <span class="taxonomy"></span>
-    <div class="content"><p><span class="inline left"><img height="150" border="0" width="130" src="https://casestudies.jrn.columbia.edu/site/bakersfield/sites/files/bakersfield/images/swenson.jpg" class="image _original" alt="" /></span>Steve Swenson, in 2007 the <em>Californian</em>&rsquo;s blog editor, had worked for the paper for almost three decades. He was a veteran of almost every reporting job it offered, from covering cops to real estate and agriculture. He also served as the paper&rsquo;s union president.</p></div>
+    <div class="content"><p><span class="inline left"><img height="150" border="0" width="130" src="../../files/bakersfield/images/swenson.jpg" class="image _original" alt="" /></span>Steve Swenson, in 2007 the <em>Californian</em>&rsquo;s blog editor, had worked for the paper for almost three decades. He was a veteran of almost every reporting job it offered, from covering cops to real estate and agriculture. He also served as the paper&rsquo;s union president.</p></div>
       </div>
 				</div><!-- id="main" -->
 	</div><!-- id="contentbody" -->
