--- a/casestudies/17/casestudy/www/layout/case_id_17_id_31_c_bio.html
+++ b/casestudies/17/casestudy/www/layout/case_id_17_id_31_c_bio.html
@@ -240,7 +240,7 @@ font-style:italic;
 		
 		  <div class="node">        
     <span class="taxonomy"></span>
-    <div class="content"><p><span class="inline left"><img width="130" height="150" border="0" alt="" class="image _original" src="https://casestudies.jrn.columbia.edu/site/bakersfield/sites/files/bakersfield/images/jenner.jpg" /></span>Mike Jenner joined the<i> </i>Bakersfield <em>Californian</em> as managing editor in 1993 and became executive editor in 1999. Before that, he spent four years as an independent newspaper consultant specializing in design and content, and newsroom management. One of his clients was the <em>Californian</em>.</p>
+    <div class="content"><p><span class="inline left"><img width="130" height="150" border="0" alt="" class="image _original" src="../../files/bakersfield/images/jenner.jpg" /></span>Mike Jenner joined the<i> </i>Bakersfield <em>Californian</em> as managing editor in 1993 and became executive editor in 1999. Before that, he spent four years as an independent newspaper consultant specializing in design and content, and newsroom management. One of his clients was the <em>Californian</em>.</p>
 <p>Before launching his consulting practice, Jenner was managing editor of the Hartford<em> Courant</em>, where he earlier served as assistant managing editor. Jenner also worked in a variety of editing positions at the Philadelphia<em> Inquirer</em>, the Columbia, Missouri, <em>Daily Tribune</em> and the Coffeyville, Kansas, <em>Journal</em>. He had been a reporter and photographer at the Hattiesburg, Mississippi, <em>American</em> and other community newspapers as well.</p>
 <h2>Audio</h2>
 <p><em>Listen to Jenner discuss profitability and public service.</em><br />
