--- a/casestudies/19/casestudy/www/layout/case_id_19_id_43_c_bio.html
+++ b/casestudies/19/casestudy/www/layout/case_id_19_id_43_c_bio.html
@@ -231,7 +231,7 @@ font-style:italic;
 		
 		  <div class="node">        
     <span class="taxonomy"></span>
-    <div class="content"><p><span class="inline inline-left"><img width="130" height="150" border="0" alt="" class="image image-_original" src="https://casestudies.jrn.columbia.edu/site/newspress_a/sites/files/newspress_a/images/MarymontKate.jpg" /></span>Kate Marymont became executive editor of the <i>News-Press</i> in February 2001. Previously, she had been executive editor of the Springfield <i>News-Leader</i> in Missouri.</p>
+    <div class="content"><p><span class="inline inline-left"><img width="130" height="150" border="0" alt="" class="image image-_original" src="../../files/newspress_a/images/MarymontKate.jpg" /></span>Kate Marymont became executive editor of the <i>News-Press</i> in February 2001. Previously, she had been executive editor of the Springfield <i>News-Leader</i> in Missouri.</p>
 <p>Both newspapers are owned by the Gannett company, which Marymont joined in 1977. She began her career in her hometown of Springfield as a copy editor and reporter. Over the years she has been in many roles throughout newsrooms and has worked in Nashville, Tennessee; Little Rock, Arkansas; Wilmington, Delaware; and a return stint in Springfield before moving to Fort Myers.</p>
 <h3>Audio</h3>
 <p><em>Listen to Kate Marymont&rsquo;s reflections on using new technologies for old-fashioned journalism.</em><br />
