--- a/casestudies/19/casestudy/www/layout/case_id_19_id_44_c_bio.html
+++ b/casestudies/19/casestudy/www/layout/case_id_19_id_44_c_bio.html
@@ -231,7 +231,7 @@ font-style:italic;
 		
 		  <div class="node">        
     <span class="taxonomy"></span>
-    <div class="content"><p><span class="inline inline-left"><img width="130" height="150" border="0" src="https://casestudies.jrn.columbia.edu/site/newspress_a/sites/files/newspress_a/images/Cindy-McCurry-Ros.jpg" class="image image-_original" alt="" /></span>Cindy McCurry-Ross was the senior managing editor for information collection at the <em>News-Press</em> and news-press.com. She was named to that role in October 2006 after three years as managing editor.</p>
+    <div class="content"><p><span class="inline inline-left"><img width="130" height="150" border="0" src="../../files/newspress_a/images/Cindy-McCurry-Ros.jpg" class="image image-_original" alt="" /></span>Cindy McCurry-Ross was the senior managing editor for information collection at the <em>News-Press</em> and news-press.com. She was named to that role in October 2006 after three years as managing editor.</p>
 <p>Previously, she held other positions in the Fort Myers newsroom, including assistant managing editor, metro editor, and business reporter. She was top editor at newspapers in Salinas, California and Gainesville, Georgia during the 1990s. Earlier in her career, she worked as a business writer for weekly business journals in Richmond, Virginia and Jacksonville, Florida.</p>
 <p>McCurry-Ross earned a bachelor of science degree in journalism from the University of Kansas. She is married and has a daughter.</p>
 <h3>Audio</h3>
