--- a/casestudies/2/casestudy/www/layout/case_id_2_id_16_c_bio.html
+++ b/casestudies/2/casestudy/www/layout/case_id_2_id_16_c_bio.html
@@ -269,7 +269,7 @@ font-style:italic;
 		
 		  <div class="node">        
     <span class="taxonomy"></span>
-    <div class="content"><p><span class="inline left"><img width="130" height="150" border="0" alt="" class="image _original" src="https://casestudies.jrn.columbia.edu/site/frontline/sites/files/frontline/images/baxt.jpg" /></span>Amy Baxt is a producer/writer and director. She joined A Little Rain Productions in 2002 to work on a documentary for <i>Frontline</i>.&nbsp; In 2007, she left New York and A Little Rain to move to California and a job with Turner Television.</p>
+    <div class="content"><p><span class="inline left"><img width="130" height="150" border="0" alt="" class="image _original" src="../../files/frontline/images/baxt.jpg" /></span>Amy Baxt is a producer/writer and director. She joined A Little Rain Productions in 2002 to work on a documentary for <i>Frontline</i>.&nbsp; In 2007, she left New York and A Little Rain to move to California and a job with Turner Television.</p>
 <h3 style="clear: both;">Audio</h3>
 <p><em>Listen to Baxt on how a producer narrows down the story.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 1 min 3 sec</span><br />
