--- a/casestudies/2/casestudy/www/layout/case_id_2_id_17_c_bio.html
+++ b/casestudies/2/casestudy/www/layout/case_id_2_id_17_c_bio.html
@@ -269,7 +269,7 @@ font-style:italic;
 		
 		  <div class="node">        
     <span class="taxonomy"></span>
-    <div class="content"><p><span class="inline left"><img width="130" height="150" border="0" alt="" class="image _original" src="https://casestudies.jrn.columbia.edu/site/frontline/sites/files/frontline/images/bomse.jpg" /></span>Seth Bomse is a freelance documentary editor based in New York City. He has edited films for the award-winning PBS series <em>Frontline</em>, as well as <em>The American Experience</em>.  He worked on the critically acclaimed PBS series &ldquo;The Mysterious Human Heart.&rdquo; In 2007, he was co-writer and editor for <em>Frontline&rsquo;s</em> four-part series &ldquo;News War.&rdquo; He lives with his wife in Brooklyn.</p>
+    <div class="content"><p><span class="inline left"><img width="130" height="150" border="0" alt="" class="image _original" src="../../files/frontline/images/bomse.jpg" /></span>Seth Bomse is a freelance documentary editor based in New York City. He has edited films for the award-winning PBS series <em>Frontline</em>, as well as <em>The American Experience</em>.  He worked on the critically acclaimed PBS series &ldquo;The Mysterious Human Heart.&rdquo; In 2007, he was co-writer and editor for <em>Frontline&rsquo;s</em> four-part series &ldquo;News War.&rdquo; He lives with his wife in Brooklyn.</p>
 <h3 style="clear: both;">Audio</h3>
 <p><em>Listen to Bomse on his working relationship with the producer.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 53 sec</span><br />
