--- a/casestudies/22/casestudy/www/layout/case_id_22_id_62_c_bio.html
+++ b/casestudies/22/casestudy/www/layout/case_id_22_id_62_c_bio.html
@@ -312,7 +312,7 @@ font-style:italic;
 		
 		  <div class="node">        
     <span class="taxonomy"></span>
-    <div class="content"><p><span class="inline inline-left"><img height="150" width="130" class="image image-_original" src="https://casestudies.jrn.columbia.edu/site/bbc/sites/files/bbc/images/bio_boaden.jpg" alt="" /></span>Helen Boaden began her journalistic career in 1979 with New York radio station WBAI. She joined the BBC in 1983 as a news producer. She later became a reporter and then editor of Radio 4's flagship weekly current affairs programme, File On 4. In 1997 she became head of Business Programmes and a year later head of Current Affairs, the first woman to do the job.</p>
+    <div class="content"><p><span class="inline inline-left"><img height="150" width="130" class="image image-_original" src="../../files/bbc/images/bio_boaden.jpg" alt="" /></span>Helen Boaden began her journalistic career in 1979 with New York radio station WBAI. She joined the BBC in 1983 as a news producer. She later became a reporter and then editor of Radio 4's flagship weekly current affairs programme, File On 4. In 1997 she became head of Business Programmes and a year later head of Current Affairs, the first woman to do the job.</p>
 <p>Boaden was appointed controller of Radio 4 in March 2000, and controller of BBC 7 in 2002. She became director of BBC News in September 2004.</p>
 <h3>Audio</h3>
 <p><i>Listen to Boaden on the BBC&rsquo;s license fee:</i><br />
