--- a/casestudies/22/casestudy/www/layout/case_id_22_id_63_c_bio.html
+++ b/casestudies/22/casestudy/www/layout/case_id_22_id_63_c_bio.html
@@ -312,7 +312,7 @@ font-style:italic;
 		
 		  <div class="node">        
     <span class="taxonomy"></span>
-    <div class="content"><p><span class="inline inline-left"><img height="150" width="130" class="image image-_original" src="https://casestudies.jrn.columbia.edu/site/bbc/sites/files/bbc/images/bio_byford.jpg" alt="" /></span>Mark Byford (born 1958 in West Yorkshire) joined the BBC in 1979, aged 20, as a &quot;temporary holiday relief assistant&quot; in Leeds.Over the years, he worked as a producer, reporter and editor.</p>
+    <div class="content"><p><span class="inline inline-left"><img height="150" width="130" class="image image-_original" src="../../files/bbc/images/bio_byford.jpg" alt="" /></span>Mark Byford (born 1958 in West Yorkshire) joined the BBC in 1979, aged 20, as a &quot;temporary holiday relief assistant&quot; in Leeds.Over the years, he worked as a producer, reporter and editor.</p>
 <p>He joined the BBC's Board of Management in 1996 as Director, Regional Broadcasting.Two years later he became Director of the BBC World Service and went on to establish the BBC's Global News Division.</p>
 <p>In January 2004, Byford became Deputy Director-General of the BBC (briefly Acting Director-General)  and head of all its journalism.</p>
 <h3>Audio</h3>
