--- a/casestudies/22/casestudy/www/layout/case_id_22_id_66_c_bio.html
+++ b/casestudies/22/casestudy/www/layout/case_id_22_id_66_c_bio.html
@@ -312,7 +312,7 @@ font-style:italic;
 		
 		  <div class="node">        
     <span class="taxonomy"></span>
-    <div class="content"><p><span class="inline inline-left"><img height="150" width="130" class="image image-_original" src="https://casestudies.jrn.columbia.edu/site/bbc/sites/files/bbc/images/bio_marsh.jpg" alt="" /></span>Kevin Marsh (born 1954) studied at Oxford, and joined the BBC as a news trainee in 1978. He became a member of The World at One team in 1980. After a stint at ITN, he rejoined the BBC as deputy editor of The World At One in 1987, and was promoted to editor in 1993. In 1998, he developed and launched Radio 4's Broadcasting House.</p>
+    <div class="content"><p><span class="inline inline-left"><img height="150" width="130" class="image image-_original" src="../../files/bbc/images/bio_marsh.jpg" alt="" /></span>Kevin Marsh (born 1954) studied at Oxford, and joined the BBC as a news trainee in 1978. He became a member of The World at One team in 1980. After a stint at ITN, he rejoined the BBC as deputy editor of The World At One in 1987, and was promoted to editor in 1993. In 1998, he developed and launched Radio 4's Broadcasting House.</p>
 <p>Marsh was appointed editor of <i>Today </i>on Radio 4 in November 2002. In February 2006, he moved to become editor of the BBC College of Journalism.</p>
 <h3>Audio</h3>
 <p><i>Listen to Marsh talk about Today&rsquo;s editorial meetings:</i><br />
