--- a/casestudies/22/casestudy/www/layout/case_id_22_id_67_c_bio.html
+++ b/casestudies/22/casestudy/www/layout/case_id_22_id_67_c_bio.html
@@ -312,7 +312,7 @@ font-style:italic;
 		
 		  <div class="node">        
     <span class="taxonomy"></span>
-    <div class="content"><p><span class="inline inline-left"><img height="150" width="130" class="image image-_original" src="https://casestudies.jrn.columbia.edu/site/bbc/sites/files/bbc/images/bio_mitchell.jpg" alt="" /></span>Stephen Mitchell (born 1949) attended Manchester University and worked first for Thomson Regional Newspapers. He joined the BBC Radio Newsroom in 1974, and worked on the <i>Today </i>program. In 1992 he become managing editor, Radio News, and in 1994 was appointed editor of Radio News Programmes. In June 1997 he became deputy head, BBC News Programmes.</p>
+    <div class="content"><p><span class="inline inline-left"><img height="150" width="130" class="image image-_original" src="../../files/bbc/images/bio_mitchell.jpg" alt="" /></span>Stephen Mitchell (born 1949) attended Manchester University and worked first for Thomson Regional Newspapers. He joined the BBC Radio Newsroom in 1974, and worked on the <i>Today </i>program. In 1992 he become managing editor, Radio News, and in 1994 was appointed editor of Radio News Programmes. In June 1997 he became deputy head, BBC News Programmes.</p>
 <p>Mitchell became head of BBC Radio News in December 1999. The 800 staff of Radio News provided daily national and international journalism on all BBC domestic radio networks, local radio stations and World Service radio in English, from Today on Radio 4 to the journalism of Radio Five Live and from Newsbeat on Radio 1 to Newshour on the World Service.</p>
 <h3>Audio</h3>
 <p><i>Listen to Mitchell on his job:</i><br />
