--- a/casestudies/22/casestudy/www/layout/case_id_22_id_68_c_bio.html
+++ b/casestudies/22/casestudy/www/layout/case_id_22_id_68_c_bio.html
@@ -312,7 +312,7 @@ font-style:italic;
 		
 		  <div class="node">        
     <span class="taxonomy"></span>
-    <div class="content"><p><span class="inline inline-left"><img height="150" width="130" class="image image-_original" src="https://casestudies.jrn.columbia.edu/site/bbc/sites/files/bbc/images/bio_sambrook.jpg" alt="" /></span>Richard Sambrook (born 1956) attended Reading University. After a stint with Thomson Regional Newspapers, he joined the BBC in 1980 as a radio editor. After several years as a producer and program editor for national TV news, he was appointed news editor, BBC Newsgathering, in 1992. In 1996, he became head of Newsgathering.</p>
+    <div class="content"><p><span class="inline inline-left"><img height="150" width="130" class="image image-_original" src="../../files/bbc/images/bio_sambrook.jpg" alt="" /></span>Richard Sambrook (born 1956) attended Reading University. After a stint with Thomson Regional Newspapers, he joined the BBC in 1980 as a radio editor. After several years as a producer and program editor for national TV news, he was appointed news editor, BBC Newsgathering, in 1992. In 1996, he became head of Newsgathering.</p>
 <p>From 1999 to 2001, Sambrook served as deputy director of the News division, and became its director in 2001. In September 2004, he became director of the BBC's Global News division, responsible for leading the BBC's international news services across radio, television and new media.</p>
 <h3>Audio</h3>
 <p><i>Listen to Sambrook on editorial decisionmaking at the BBC:</i><br />
