--- a/casestudies/23/casestudy/www/layout/case_id_23_id_59_c_bio.html
+++ b/casestudies/23/casestudy/www/layout/case_id_23_id_59_c_bio.html
@@ -303,7 +303,7 @@ font-style:italic;
 		
 		  <div class="node">        
     <span class="taxonomy"></span>
-    <div class="content"><p><span class="inline inline-left"><img width="130" height="150" alt="" src="https://casestudies.jrn.columbia.edu/site/sunsentinel/sites/files/sunsentinel/images/kestin.jpg" class="image image-_original" /></span>Sally Kestin is an investigative reporter at the South Florida <i>Sun-Sentinel</i> and previously covered social services, education, and local government for the Tampa <i>Tribune</i> and the Sarasota <i>Herald-Tribune</i>. After the 2004 Florida hurricanes, she led a team of reporters who uncovered $530 million in fraud and waste in FEMA disaster aid nationwide. A graduate of Medill School of Journalism at Northwestern University, she has won state and national awards and was a finalist for the 2006 Pulitzer Prize for investigative reporting.</p></div>
+    <div class="content"><p><span class="inline inline-left"><img width="130" height="150" alt="" src="../../files/sunsentinel/images/kestin.jpg" class="image image-_original" /></span>Sally Kestin is an investigative reporter at the South Florida <i>Sun-Sentinel</i> and previously covered social services, education, and local government for the Tampa <i>Tribune</i> and the Sarasota <i>Herald-Tribune</i>. After the 2004 Florida hurricanes, she led a team of reporters who uncovered $530 million in fraud and waste in FEMA disaster aid nationwide. A graduate of Medill School of Journalism at Northwestern University, she has won state and national awards and was a finalist for the 2006 Pulitzer Prize for investigative reporting.</p></div>
       </div>
 				</div><!-- id="main" -->
 	</div><!-- id="contentbody" -->
