--- a/casestudies/24/casestudy/www/layout/case_id_24_id_70_c_bio.html
+++ b/casestudies/24/casestudy/www/layout/case_id_24_id_70_c_bio.html
@@ -332,7 +332,7 @@ font-style:italic;
 		
 		  <div class="node">        
     <span class="taxonomy"></span>
-    <div class="content"><p><span class="inline inline-left"><img width="130" height="150" alt="" src="https://casestudies.jrn.columbia.edu/site/csm/sites/files/csm/images/bio_campagna.jpg" class="image image-_original" /></span>Joel Campagna joined the Committee to Protect Journalists (CPJ) in 1996 as senior program coordinator for its Middle East program. He oversaw CPJ&rsquo;s research and advocacy for the Persian Gulf, Mashriq, Maghreb, and Turkey. From 1993&ndash;96, Campagna was a consultant to Human Rights Watch, conducting research in Egypt, Lebanon, and Syria.</p>
+    <div class="content"><p><span class="inline inline-left"><img width="130" height="150" alt="" src="../../files/csm/images/bio_campagna.jpg" class="image image-_original" /></span>Joel Campagna joined the Committee to Protect Journalists (CPJ) in 1996 as senior program coordinator for its Middle East program. He oversaw CPJ&rsquo;s research and advocacy for the Persian Gulf, Mashriq, Maghreb, and Turkey. From 1993&ndash;96, Campagna was a consultant to Human Rights Watch, conducting research in Egypt, Lebanon, and Syria.</p>
 <p>Campagna has lived and studied in Egypt where he attended the American University in Cairo&rsquo;s intensive Arabic language program. He holds a master&rsquo;s degree in international affairs from Columbia University&rsquo;s School of International and Public Affairs, and a bachelor&rsquo;s degree in Middle East Studies from Fordham University.</p>
 <h3 style="clear: both;">Audio</h3>
 <p><span class="audioprompt"><i>Listen to Campagna describe what CPJ does.</i></span><b><span class="footnoteslength"><b>Length:</b> 1 min 41 sec</span><br />
