--- a/casestudies/24/casestudy/www/layout/case_id_24_id_73_c_bio.html
+++ b/casestudies/24/casestudy/www/layout/case_id_24_id_73_c_bio.html
@@ -332,7 +332,7 @@ font-style:italic;
 		
 		  <div class="node">        
     <span class="taxonomy"></span>
-    <div class="content"><p><span class="inline inline-left"><img width="130" height="150" alt="" src="https://casestudies.jrn.columbia.edu/site/csm/sites/files/csm/images/bio_clarkscott.jpg" class="image image-_original" /></span>David C. Scott was named international news editor for the <i>Christian Science Monitor</i> in 1999. Prior to that, he was a correspondent. He covered Wall Street, and later served overseas, reporting print and broadcast stories as the <i>Monitor</i>&rsquo;s Latin America bureau chief and as the Australasia bureau chief.</p>
+    <div class="content"><p><span class="inline inline-left"><img width="130" height="150" alt="" src="../../files/csm/images/bio_clarkscott.jpg" class="image image-_original" /></span>David C. Scott was named international news editor for the <i>Christian Science Monitor</i> in 1999. Prior to that, he was a correspondent. He covered Wall Street, and later served overseas, reporting print and broadcast stories as the <i>Monitor</i>&rsquo;s Latin America bureau chief and as the Australasia bureau chief.</p>
 <h3 style="clear: both;">Audio</h3>
 <p><span class="audioprompt"><i>Listen to Scott discuss the challenges of reporters&rsquo; security.</i></span><span class="footnoteslength"><b>Length:</b> 1 min 57 sec</span><br />
 <img border="0" alt="" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/csm/audio/bio_david_clarkscott.mp3" class="audiofile" /></p></div>
