--- a/casestudies/24/casestudy/www/layout/case_id_24_id_79_c_bio.html
+++ b/casestudies/24/casestudy/www/layout/case_id_24_id_79_c_bio.html
@@ -332,7 +332,7 @@ font-style:italic;
 		
 		  <div class="node">        
     <span class="taxonomy"></span>
-    <div class="content"><p><span class="inline inline-left"><img width="130" height="150" class="image image-_original" src="https://casestudies.jrn.columbia.edu/site/csm/sites/files/csm/images/bio_simon.jpg" alt="" /></span>Joel Simon worked as a journalist in California and Latin America before joining the Committee to Protect Journalists (CPJ) as Americas program coordinator in 1997. He became CPJ deputy director in 2000, and executive director in July 2006.</p>
+    <div class="content"><p><span class="inline inline-left"><img width="130" height="150" class="image image-_original" src="../../files/csm/images/bio_simon.jpg" alt="" /></span>Joel Simon worked as a journalist in California and Latin America before joining the Committee to Protect Journalists (CPJ) as Americas program coordinator in 1997. He became CPJ deputy director in 2000, and executive director in July 2006.</p>
 <p>Simon began his career as a writer and photographer based in Central America, focusing on Guatemala&rsquo;s civil war. He holds a master&rsquo;s degree in Latin American studies from Stanford University. In 1989&ndash;91 he worked as a journalist in Mexico, then moved to San Francisco in 1991&ndash;94, where he was a contributing editor to <i>SF Weekly</i>. He returned to Mexico in 1994&ndash;97, and covered such events as the Zapatista uprising in Chiapas and the peso devaluation.</p>
 <h3>Audio</h3>
 <p><span class="audioprompt"><i>Listen to Simon discuss his decision to join CPJ.</i></span><span class="footnoteslength"><b>Length:</b> 33 sec</span><br />
