--- a/casestudies/67/casestudy/www/layout/case_id_67_id_598.html
+++ b/casestudies/67/casestudy/www/layout/case_id_67_id_598.html
@@ -212,7 +212,7 @@ font-style:italic;
     <div class="content"><div class="content">
 <ul class="menu">
 <li class="printpdf">
-<a href="../../files/global/67/Associated&#32;Press&#32;and&#32;Lance&#32;Corporal&#32;Joshua&#32;Bernard_wm.pdf" target="_blank">Download this case as a PDF</a></li>
+<a href="../../files/global/67/AP&#32;and&#32;Charlotte&#32;Observer&#32;Text.pdf" target="_blank">Download this case as a PDF</a></li>
 </ul>
 </div>
 </div>
