--- a/casestudies/1/casestudy/www/layout/case_id_1_id_2_c_bio.html
+++ b/casestudies/1/casestudy/www/layout/case_id_1_id_2_c_bio.html
@@ -1,4 +1,4 @@
-
+1
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
@@ -131,7 +131,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  href="case_id_1.html">Introduction</a>
+<li class="leaf"><a  href="case_id_1_id_19.html">Introduction</a>
 
 
 
