--- a/casestudies/109/casestudy/www/layout/case_id_109_id_213_c_bio.html
+++ b/casestudies/109/casestudy/www/layout/case_id_109_id_213_c_bio.html
@@ -268,7 +268,11 @@ font-style:italic;
 	<strong>Ian Katz </strong>was deputy editor of the <em>Guardian</em>. He joined the paper in 1990, and had worked as a reporter, foreign correspondent, features editor, and editor of the Saturday paper.</p>
 <p>
 	<i>Listen to Katz discuss how he became Assange&rsquo;s main contact.</i><br />
-	<img alt="" border="0" class="audiofile" src="../../files/audios/189/Katz&#32;bio&#32;quotes&#32;.mp3" /></p>
+	<!-- <img alt="" border="0" class="audiofile" src="../../files/audios/189/Katz&#32;bio&#32;quotes&#32;.mp3" /> -->
+	<audio controls>
+      <source src="../../files/audios/189/Katz&#32;bio&#32;quotes&#32;.mp3" type="audio/mpeg">
+    </audio>
+</p>
 </div>
       </div>
 				</div><!-- id="main" -->
