--- a/casestudies/109/casestudy/www/layout/case_id_109_id_212_c_bio.html
+++ b/casestudies/109/casestudy/www/layout/case_id_109_id_212_c_bio.html
@@ -268,7 +268,11 @@ font-style:italic;
 	<strong>Nick Davies </strong>had worked for the <em>Guardian</em> since 1979. Besides his freelance journalism, he wrote a book called <em>Flat Earth News</em>, about what he dubbed &ldquo;churnalism&rdquo;&mdash;the tendency of news organizations to publish stories that are false, distorted or propaganda. In 2009, he broke a story for the <em>Guardian</em> that the <em>News of the World</em> had tapped private phones to get material for articles.</p>
 <p>
 	<i>Listen to Davies discuss finding the real story.</i><br />
-	<img alt="" border="0" class="audiofile" src="../../files/audios/187/Davies&#32;bio&#32;quote.mp3" /></p>
+	<!-- <img alt="" border="0" class="audiofile" src="../../files/audios/187/Davies&#32;bio&#32;quote.mp3" /> -->
+	<audio controls>
+      <source src="../../files/audios/187/Davies&#32;bio&#32;quote.mp3" type="audio/mpeg">
+    </audio>
+</p>
 </div>
       </div>
 				</div><!-- id="main" -->
