--- a/casestudies/70/casestudy/www/layout/case_id_70_id_173_c_bio.html
+++ b/casestudies/70/casestudy/www/layout/case_id_70_id_173_c_bio.html
@@ -266,7 +266,8 @@ font-style:italic;
 	<strong>Ian Katz </strong>was deputy editor of the <em>Guardian</em>. He joined the paper in 1990, and had worked as a reporter, foreign correspondent, features editor, and editor of the Saturday paper.</p>
 <p>
 	<i>Listen to Katz talk about how he became Assange&rsquo;s main contact.</i><br />
-	<img alt="" border="0" class="audiofile" src="../../files/audios/189/Katz&#32;bio&#32;quotes&#32;.mp3" /></p>
+	<img alt="" border="0" class="audiofile" src="../../files/audios/189/Katz&#32;bio&#32;quotes&#32;.mp3" />
+</p>
 </div>
       </div>
 				</div><!-- id="main" -->
