--- a/casestudies/110/casestudy/www/layout/case_id_110_id_218_c_bio.html
+++ b/casestudies/110/casestudy/www/layout/case_id_110_id_218_c_bio.html
@@ -250,7 +250,11 @@ font-style:italic;
 <blockquote>
 	<p>
 		<i>Dennis discusses what led him to pursue photojournalism.</i><br />
-		<img alt="" border="0" class="audiofile" src="../../files/audios/307/Dennis2.mp3" /></p>
+		<!-- <img alt="" border="0" class="audiofile" src="../../files/audios/307/Dennis2.mp3" /> -->
+		<audio controls>
+          <source src="../../files/audios/307/Dennis2.mp3" type="audio/mpeg">
+        </audio>
+    </p>
 </blockquote>
 </div>
       </div>
