--- a/casestudies/110/casestudy/www/layout/case_id_110_id_219_c_bio.html
+++ b/casestudies/110/casestudy/www/layout/case_id_110_id_219_c_bio.html
@@ -250,7 +250,11 @@ font-style:italic;
 <blockquote>
 	<p>
 		<em>Otway talks about what she learned from working on</em> Hell &amp; Back<br />
-		<img alt="" border="0" class="audiofile" src="../../files/audios/305/Fiona2.mp3" /></p>
+		<!-- <img alt="" border="0" class="audiofile" src="../../files/audios/305/Fiona2.mp3" /> -->
+		<audio controls>
+          <source src="../../files/audios/305/Fiona2.mp3" type="audio/mpeg">
+        </audio>
+	</p>
 </blockquote>
 </div>
       </div>
