--- a/casestudies/111/casestudy/www/layout/case_id_111_id_221_c_bio.html
+++ b/casestudies/111/casestudy/www/layout/case_id_111_id_221_c_bio.html
@@ -264,7 +264,12 @@ font-style:italic;
 	A Florida native, Robert McClure joined the <em>Post-Intelligencer</em> in 1999 after stints at <em>United Press International</em> and the Fort Lauderdale-based South Florida<em>Sun-Sentinel</em>, where he was a Pulitzer finalist for a magazine piece he co-wrote on the 1985 crash of Delta Airlines 191. He covered local government, growth and development, and air safety before becoming an environmental reporter focused on the Everglades. After a midcareer journalism fellowship at the University of Michigan, he relocated to the Pacific Northwest. &nbsp; &nbsp; &nbsp;</p>
 <blockquote>
 	<p>
-		<i>McClure discusses how reporting on climate changed his outlook.</i><img alt="" border="0" class="audiofile" src="../../files/audios/309/McClure&#32;bio&#32;clip.mp3" /></p>
+		<i>McClure discusses how reporting on climate changed his outlook.</i>
+		<!-- <img alt="" border="0" class="audiofile" src="../../files/audios/309/McClure&#32;bio&#32;clip.mp3" /> -->
+		<audio controls>
+          <source src="../../files/audios/309/McClure&#32;bio&#32;clip.mp3" type="audio/mpeg">
+        </audio>
+	</p>
 </blockquote>
 </div>
       </div>
