--- a/casestudies/111/casestudy/www/layout/case_id_111_id_222_c_bio.html
+++ b/casestudies/111/casestudy/www/layout/case_id_111_id_222_c_bio.html
@@ -265,7 +265,11 @@ font-style:italic;
 <blockquote>
 	<p>
 		<i>Smith discusses using her science background for journalism.</i><br />
-		<img alt="" border="0" class="audiofile" src="../../files/audios/314/Smith&#32;bio&#32;clip.mp3" /></p>
+		<!-- <img alt="" border="0" class="audiofile" src="../../files/audios/314/Smith&#32;bio&#32;clip.mp3" /> -->
+		<audio controls>
+          <source src="../../files/audios/314/Smith&#32;bio&#32;clip.mp3" type="audio/mpeg">
+        </audio>
+	</p>
 </blockquote>
 </div>
       </div>
