--- a/casestudies/111/casestudy/www/layout/case_id_111_id_223_c_bio.html
+++ b/casestudies/111/casestudy/www/layout/case_id_111_id_223_c_bio.html
@@ -269,7 +269,11 @@ font-style:italic;
 <blockquote>
 	<p>
 		<i>Hibbard remembers her time at the</i> Post-Intelligencer.<br />
-		<img alt="" border="0" class="audiofile" src="../../files/audios/312/Rita&#32;bio&#32;clip.mp3" /></p>
+		<!-- <img alt="" border="0" class="audiofile" src="../../files/audios/312/Rita&#32;bio&#32;clip.mp3" /> -->
+		<audio controls>
+          <source src="../../files/audios/312/Rita&#32;bio&#32;clip.mp3" type="audio/mpeg">
+        </audio>
+	</p>
 </blockquote>
 </div>
       </div>
